src/objects/Order.object
<CustomObject>
    <fields>
        <fullName>CPQ_First_Period_Prorated_Amount__c</fullName>
        <label>Prorated Period Amount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Royalties__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Royalties</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Effective_Date__c</fullName>
        <label>Contract Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Ref_Number__c</fullName>
        <label>Contract Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Sign_Date__c</fullName>
        <label>Contract Sign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ERP_Order_Number__c</fullName>
        <label>ERP Order Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Invoice_Date__c</fullName>
        <label>Prorated Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Invoice_Payment_Terms__c</fullName>
        <label>Prorated Invoice Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 90</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Period_End_Date__c</fullName>
        <label>Prorated Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Period_Start_Date__c</fullName>
        <label>Prorated Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>If_Replacement_Order_Original_Order__c</fullName>
        <label>If Replacement Order, Original Order #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <label>Opportunity ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optional_Support_Start_Date__c</fullName>
        <label>Optional Support Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Integration_Status__c</fullName>
        <label>Order Integration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Ineliglible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eligible for Order Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement Order</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Out_Clause_date__c</fullName>
        <label>Out Clause date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Due__c</fullName>
        <label>Payment Due</label>
        <picklist>
            <picklistValues>
                <fullName>Invoice Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Receipt Date</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Perpetual_Buyout_Option__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Perpetual Buyout Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Billing_Frequency__c</fullName>
        <formula>TEXT( SBQQ__Quote__r.SBQQ__BillingFrequency__c )</formula>
        <label>Billing Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Defines the billing frequency.</description>
        <globalPicklist>SBQQ__BillingFrequency</globalPicklist>
        <inlineHelpText>Defines the billing frequency.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the order is contracted.</description>
        <inlineHelpText>Indicates if the order is contracted.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PaymentTerm__c</fullName>
        <description>The payment term for this order.</description>
        <globalPicklist>SBQQ__PaymentTerm</globalPicklist>
        <inlineHelpText>The payment term for this order.</inlineHelpText>
        <label>Payment Term</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceCalcStatusMessage__c</fullName>
        <description>The price calculation status message.</description>
        <inlineHelpText>The price calculation status message</inlineHelpText>
        <label>Price Calculation Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceCalcStatus__c</fullName>
        <description>The order price calculation  job status.  It is set by the system.</description>
        <globalPicklist>SBQQ__JobStatus</globalPicklist>
        <inlineHelpText>Indicates the order price calculation job status.  It is set by the system.</inlineHelpText>
        <label>Price Calculation Status</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The quote where the order is created from.</description>
        <inlineHelpText>The quote where the order is created from.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TaxAmount__c</fullName>
        <description>The tax amount</description>
        <inlineHelpText>The tax amount</inlineHelpText>
        <label>Tax</label>
        <summarizedField>OrderItem.SBQQ__TaxAmount__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__TotalAmount__c</fullName>
        <description>The total order amount with tax included</description>
        <inlineHelpText>The total order amount with tax included</inlineHelpText>
        <label>Total Amount (With Tax)</label>
        <summarizedField>OrderItem.SBQQ__TotalAmount__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SFDC_Bill_To_Customer_ID__c</fullName>
        <label>SFDC Bill To Customer ID?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Date__c</fullName>
        <label>Sales Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Order_End_Date__c</fullName>
        <label>Sales Order End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Software_Delivery_Date__c</fullName>
        <label>Software Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Term_Duration__c</fullName>
        <label>Subscription Term Duration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxCode__c</fullName>
        <label>Tax Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamp_for_Order_Upload__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timestamp for Order Upload</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Wire_Message__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wire Message</label>
        <referenceTo>CPQ_Wire_Message__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>basecurr__c</fullName>
        <formula>TEXT(SBQQ__Quote__r.SBQQ__Opportunity2__r.Bill_To__r.Participant_Account__r.CurrencyIsoCode)</formula>
        <label>Bill To Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billto__c</fullName>
        <formula>SBQQ__Quote__r.SBQQ__Opportunity2__r.Bill_To__r.Contact_Name__c</formula>
        <label>Bill To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ch_Escalation_Effective_Period__c</fullName>
        <formula>TEXT( SBQQ__Quote__r.SBQQ__Opportunity2__r.State__c )</formula>
        <label>Opportunity State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ch_License_Type__c</fullName>
        <formula>TEXT(SBQQ__Quote__r.SBQQ__Opportunity2__r.Deal_Type__c)</formula>
        <label>Deal Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currency__c</fullName>
        <formula>TEXT(SBQQ__Quote__r.SBQQ__Opportunity2__r.CurrencyIsoCode)</formula>
        <label>Opportunity Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customerid__c</fullName>
        <formula>Account.Participant_id__c</formula>
        <label>Participant ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>l_classid__c</fullName>
        <formula>SBQQ__Quote__r.SBQQ__Opportunity2__r.Bill_To__r.Account__r.pw_cc__BillingCountryLookup__r.pw_cc__IsoCode_2__c</formula>
        <label>Bill To Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>l_customerid__c</fullName>
        <formula>Account.Participant_id__c</formula>
        <label>Participant ID 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>locationid__c</fullName>
        <formula>IF(
    basecurr__c == &apos;AUD&apos; || basecurr__c == &apos;NZD&apos;,
    &apos;71&apos;,
    IF(
        Account.Participant_id__c == &apos;1378&apos;,
        &apos;12&apos;,
        &apos;10&apos;
    )
)</formula>
        <label>Intacct Company Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>referenceno__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shippingmethod__c</fullName>
        <defaultValue>&apos;Electronically Delivered Software&apos;</defaultValue>
        <label>Shipping Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shipto__c</fullName>
        <formula>SBQQ__Quote__r.SBQQ__Opportunity2__r.Ship_To__r.Contact_Name__c</formula>
        <label>Ship To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>termname__c</fullName>
        <label>Payment Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transactiontype__c</fullName>
        <defaultValue>&apos;Automated Sales Order&apos;</defaultValue>
        <label>Sales Order Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Term_Start_Date_before_Start_Date</fullName>
        <active>true</active>
        <description>Should display an error when Term Start Date comes before Start Date.</description>
        <errorConditionFormula>SBQQ__Quote__r.CPQ_Prorated_Start_Date__c &gt;  SBQQ__Quote__r.SBQQ__StartDate__c</errorConditionFormula>
        <errorMessage>On associated Quote, Prorated Start Date cannot be after Start Date.</errorMessage>
    </validationRules>
</CustomObject>